data/test/type_check/fail/generate_1.v
wire x;
if (x) begin
  initial $display("hello");
end else begin
  initial $display("world");
end
